* more typo cleanups promted by Dr. Ruud.
git-svn-id: http://svn.pugscode.org/pugs@23345 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -705,7 +705,7 @@ attempts at binding.
 
 =head2 Flattening argument lists
 
-The unary prefix operator C<*> casts a value to an C<Capture>
+The unary prefix operator C<*> casts a value to a C<Capture>
 object, then splices it into the argument list it occurs in.
 
 Casting C<Capture> to C<Capture> is a no-op:
