--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -697,7 +697,7 @@ But these ones I<do> autovivify:
     my $val := %hash<foo><bar>;
 
     my @array;
-    my $ref = \@array[0][0]; # $ref is an Capture object - see S02
+    my $ref = \@array[0][0]; # $ref is a Capture object - see S02
 
     my %hash;
     %hash<foo><bar> = "foo"; # duh
