* S04: Capture ~~ Signature can test for bindableness.
git-svn-id: http://svn.pugscode.org/pugs@23346 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -764,6 +764,7 @@ separate entries for lists.
     Array   .[number] array element truth*     match if $_[number]
     Num     NumRange  in numeric range         match if $min <= $_ <= $max
     Str     StrRange  in string range          match if $min le $_ le $max
+    Capture Signature parameter binding        match if $cap can bind to $sig
     Any     Code<>    simple closure truth*    match if $x() (ignoring $_)
     Any     Class     class membership         match if $_.does($x)
     Any     Role      role playing             match if $_.does($x)
