PG-P6 - the lexer knows about '1 < 2', '%EXP<str>', and '@a = <str>'
git-svn-id: http://svn.pugscode.org/pugs@10002 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Grammar-Perl6/TODO
+++ b/misc/pX/Common/Pugs-Grammar-Perl6/TODO
@@ -37,7 +37,10 @@ TODO
 
 - Implement double-quoted-string split on variables (interpolation)
 - Implement %hash<qw string> and '<' and '>'
+    - '<' always requires whitespace before
 - Implement /rule/ and '/'
+    - see expect... in Expression.pm
+
 - Implement [op]@list
 - Implement expressions inside names - like:
     prefix:{'+'}
