--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,9 +13,9 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 15 Apr 2006
+  Last Modified: 18 Apr 2006
   Number: 6
-  Version: 24
+  Version: 25
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -744,11 +744,11 @@ operator:
 
 =head2 Multidimensional argument list binding
 
-Some functions take more than one C<Capture> as their argument list, that they
-wish not to be flattened into one list.  For instance, C<zip()> wants to
-iterate several lists in parallel, while array and hash subscripts want to
-process multidimensional slices.  The set of underlying argument list (Capture)
-objects may be bound to a single array parameter declared with a C<;> twigil:
+Some functions take more than one lists of positional and/or named arguments,
+that they wish not to be flattened into one list.  For instance, C<zip()> wants
+to iterate several lists in parallel, while array and hash subscripts want to
+process multidimensional slices.  The set of underlying argument lists may be
+bound to a single array parameter declared with a C<;> twigil:
 
     sub foo (*@;slices) { ... }
 
@@ -767,6 +767,11 @@ know that multidimensionality is the intention.
 It is allowed to specify a return type:
 
     sub foo (*@;slices --> Num) { ... }
+
+The invocant does not participate in multi-dimensional argument lists,
+so C<self> is not present in any of the C<@;slices> below:
+
+    method foo (*@;slices) { ... }
 
 =head2 Zero-dimensional argument list
 
