PG-P6 - code cleanup; updated TODO; added test.pl
git-svn-id: http://svn.pugscode.org/pugs@10017 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Grammar-Perl6/TODO
+++ b/misc/pX/Common/Pugs-Grammar-Perl6/TODO
@@ -6,10 +6,11 @@ Priorities
 
 - parse ext/Test/lib/Test.pm
 - failures:
-    %ENV<TEST_ALWAYS_CALLER>
-    infinite loop?
-- <...> and %x<...> should be implemented as circumfix and postcircumfix op
-- /rule/ is a term
+    $var is rw
+- workarounds:
+    - prefix/infix:<&> vs. &code
+    - <...> and %x<...> should be implemented as circumfix and postcircumfix op
+    - /rule/ is a term
   
 - merge Pod.pm into Perl6.pm
 
