PG-P6 - parses Test.pm until line 282; half implemented Signature
git-svn-id: http://svn.pugscode.org/pugs@10028 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Grammar-Perl6/TODO
+++ b/misc/pX/Common/Pugs-Grammar-Perl6/TODO
@@ -27,6 +27,9 @@ Priorities
 
 TODO
 
+- parse the op table from
+  http://svn.perl.org/parrot/trunk/languages/perl6/lib/grammar_optok.pge
+
 - macro
 - dynamic grammar
 
