PG-P6 - Test.pm parsing succeeds - except that it is trying to parse the examples in the pod...
git-svn-id: http://svn.pugscode.org/pugs@10029 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Grammar-Perl6/TODO
+++ b/misc/pX/Common/Pugs-Grammar-Perl6/TODO
@@ -2,12 +2,15 @@
 
 Priorities
 
-- Deep recursion message in perl6.pl (but it works)
+- Things that are not giving error messages:
+    (1 if 1)           # 'if' is an op
+    sub sub xxx ...    # 'multi' and 'sub' are parsed the same way
 
 - parse ext/Test/lib/Test.pm
 - failures:
-    $var is rw
 - workarounds:
+    - listop;    -- say;
+    - $obj.op()  -- when 'op' is a declared operator (not plain bareword)
     - prefix/infix:<&> vs. &code
     - <...> and %x<...> should be implemented as circumfix and postcircumfix op
     - /rule/ is a term
