git-svn-id: http://svn.pugscode.org/pugs@10032 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Grammar-Perl6/TODO
+++ b/misc/pX/Common/Pugs-Grammar-Perl6/TODO
@@ -35,6 +35,7 @@ TODO
 
 - implement statements using top-down parser (rules)
 - implement ordered testing of categories <%a|%b|%c> depending on the parser state
+- expression terminator (maybe the tokenizer is the best place?)
 
 - parse the op table from
   http://svn.perl.org/parrot/trunk/languages/perl6/lib/grammar_optok.pge
@@ -139,3 +140,6 @@ P::C::R BUGS
 - needs character classes
 
 - needs <after...>
+
+- cleanup Pugs::AST::Expression (no longer used?)
+
